# inflow_crewai

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/inflow_crewai/: crew.py  main.py
src/inflow_crewai/config/: agents.yaml  tasks.yaml
