[project]
name = "inflow_crewai"
version = "0.1.0"
description = "inflow-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
inflow_crewai = "inflow_crewai.main:run"
run_crew = "inflow_crewai.main:run"
train = "inflow_crewai.main:train"
replay = "inflow_crewai.main:replay"
test = "inflow_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
